--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,9 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -16,52 +18,40 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: "1"
-      PLAYWRIGHT_BROWSERS_PATH: "0"
-      NX_CACHE_DIRECTORY: ".nx/cache"
-
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
+          node-version: '20'
+          cache: 'npm'
           cache-dependency-path: project/package-lock.json
-
-      - name: Cache Nx
-        uses: actions/cache@v4
-        with:
-          path: project/.nx/cache
-          key: ${{ runner.os }}-nx-${{ hashFiles('project/package-lock.json', 'project/nx.json', 'project/**/project.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nx-
 
       - name: Install dependencies
         working-directory: project
-        run: npm ci --legacy-peer-deps --prefer-offline
+        run: npm ci
 
-      - name: Build Angular
+      - name: Build
         working-directory: project
-        run: npm run build -- --configuration production --base-href "/mws/"
+        run: npm run build -- --base-href=/mws/
 
-      - name: Add 404.html
-        working-directory: project
-        run: cp dist/frontend/index.html dist/frontend/404.html
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
-      - uses: actions/upload-pages-artifact@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: project/dist/frontend
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
