--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,15 @@ jobs:
           cache: 'npm'
           cache-dependency-path: project/package-lock.json
 
+      - name: Cache node modules
+        uses: actions/cache@v4
+        id: node-modules-cache
+        with:
+          path: project/node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('project/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+
       - name: Install dependencies
         working-directory: project
         run: npm ci
