--- a/project/package.json
+++ b/project/package.json
@@ -38,7 +38,7 @@
         "@nx/workspace": "22.2.0",
         "@schematics/angular": "~20.3.0",
         "@swc-node/register": "~1.9.1",
-        "@swc/core": "~1.5.7",
+        "@swc/core": "^1.15.5",
         "@swc/helpers": "~0.5.11",
         "@typescript-eslint/utils": "^8.40.0",
         "angular-cli-ghpages": "^2.0.3",
