--- a/project/package.json
+++ b/project/package.json
@@ -12,9 +12,11 @@
         "@angular/common": "~20.3.0",
         "@angular/compiler": "~20.3.0",
         "@angular/core": "~20.3.0",
+        "@angular/fire": "^20.0.1",
         "@angular/forms": "~20.3.0",
         "@angular/platform-browser": "~20.3.0",
         "@angular/router": "~20.3.0",
+        "firebase": "^11.10.0",
         "modern-normalize": "^3.0.1",
         "rxjs": "~7.8.0",
         "zone.js": "~0.15.0"
