--- a/project/.env.example
+++ b/project/.env.example
@@ -1,8 +1,3 @@
-# Firebase Configuration
-FIREBASE_API_KEY=your-api-key-here
-FIREBASE_AUTH_DOMAIN=your-auth-domain-here
-FIREBASE_PROJECT_ID=your-project-id-here
-FIREBASE_STORAGE_BUCKET=your-storage-bucket-here
-FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id-here
-FIREBASE_APP_ID=your-app-id-here
-FIREBASE_MEASUREMENT_ID=your-measurement-id-here
+# Этот файл больше не используется
+# Для конфигурации Firebase используйте переменные окружения в index.html
+# См. инструкции в README.md
